--- a/theme/src/css/main/content-elements/simple-site-header.css
+++ b/theme/src/css/main/content-elements/simple-site-header.css
@@ -260,7 +260,7 @@
 }
 
 .header.site-header.sticky-header {
-  position: sticky;
+  position: sticky; /* stylelint-disable-line */
   top: 0;
   z-index: 1;
 }
