--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -7930,7 +7930,7 @@ fieldset:disabled .btn {
   display: block;
 }
 .header.site-header.sticky-header {
-  position: sticky;
+  position: sticky; /* stylelint-disable-line */
   top: 0;
   z-index: 1;
 }
