--- a/Resources/Public/assets/development/Css/main.css
+++ b/Resources/Public/assets/development/Css/main.css
@@ -7890,6 +7890,10 @@ fieldset:disabled .btn {
   border: var(--t3-ce-header-nav-dropdown-border-width) solid var(--t3-ce-header-nav-dropdown-border-color);
   border-radius: var(--t3-ce-header-nav-dropdown-border-radius);
 }
+.main-navigation__list .main-navigation__item:last-child .main-navigation__dropdown-item-list {
+  right: 0;
+  left: auto;
+}
 .dropdown-divider {
   height: 0;
   margin: 0.5rem 0;
