[TASK] cleanup and refactor t3kit tt_content structure

--- a/Resources/Private/Templates/ContentElements/Special/DividerIcon.html
+++ b/Resources/Private/Templates/ContentElements/Special/DividerIcon.html
@@ -12,7 +12,7 @@
       <f:if condition="{data.icon}">
         <f:then>
           <span class="ce-divider-icon__icon-wrp">
-            <t3kit:render.svg src="{data.icon}" class="t3icon ce-divider-icon__icon {data.icon_class}" />
+            <t3kit:render.svg src="{data.icon}" class="t3icon ce-divider-icon__icon" />
           </span>
         </f:then>
         <f:else>
