--- a/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteFooter.html
@@ -173,7 +173,7 @@
 
   <f:if condition="{flexform.show_page_icons} && {item.data.nav_icon}">
     <span class="ce-site-footer__links-list-item-icon-wrp">
-      <t3kit:render.svg src="{item.data.nav_icon}" aria-hidden="true" focusable="false" class="t3icon ce-site-footer__links-list-item-icon {item.data.nav_icon_class}" />
+      <t3kit:render.svg src="{item.data.nav_icon}" aria-hidden="true" focusable="false" class="t3icon ce-site-footer__links-list-item-icon" />
     </span>
   </f:if>
 
