--- a/Resources/Private/Templates/ContentElements/Static/BigIconTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/BigIconTextLink.html
@@ -19,7 +19,7 @@
 
       <f:if condition="{data.icon}">
         <div class="ce-big-icon-text-link__icon-wrp text-{data.header_position}">
-          <t3kit:render.svg src="{data.icon}" class="t3icon ce-big-icon-text-link__icon {data.icon_class}" />
+          <t3kit:render.svg src="{data.icon}" class="t3icon ce-big-icon-text-link__icon" />
         </div>
       </f:if>
 
