--- a/Resources/Private/Templates/ContentElements/Static/IconTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/IconTextLink.html
@@ -22,7 +22,7 @@
       {f:if(condition: '{data.header_position} == center' , then: ' ce-icon-text-link--header-center')}">
         <f:if condition="{data.icon}">
           <div class="ce-icon-text-link__icon-wrp">
-            <t3kit:render.svg src="{data.icon}" class="t3icon ce-icon-text-link__icon {data.icon_class}" />
+            <t3kit:render.svg src="{data.icon}" class="t3icon ce-icon-text-link__icon" />
           </div>
         </f:if>
 
