[BUGFIX] fix invalid class names in BE layouts templates

--- a/Resources/Private/Templates/Page/4columns.html
+++ b/Resources/Private/Templates/Page/4columns.html
@@ -37,10 +37,10 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main id="main" class="4columns">
+  <main id="main" class="page-4columns">
 
-    <section class="4columns__top-content">
-      <div class="4columns__top-content-container">
+    <section class="page-4columns__top-content">
+      <div class="page-4columns__top-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
       </div>
     </section>
@@ -51,13 +51,13 @@
       </div>
     </f:if>
 
-    <section class="4columns__before-content ">
-      <div class="4columns__before-content-container">
+    <section class="page-4columns__before-content ">
+      <div class="page-4columns__before-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
       </div>
     </section>
 
-    <section class="4columns__content">
+    <section class="page-4columns__content">
 
       <div class="container-wrp">
         <div class="container">
@@ -83,8 +83,8 @@
 
     </section>
 
-    <section class="4columns__after-content">
-      <div class="4columns__after-content-container">
+    <section class="page-4columns__after-content">
+      <div class="page-4columns__after-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
       </div>
     </section>
