--- a/Resources/Private/Templates/Page/1column.html
+++ b/Resources/Private/Templates/Page/1column.html
@@ -37,10 +37,10 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main id="main" class="1column">
+  <main id="main" class="page-1column">
 
-    <section class="1column__top-content">
-      <div class="1column__top-content-container">
+    <section class="page-1column__top-content">
+      <div class="page-1column__top-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
       </div>
     </section>
@@ -51,13 +51,13 @@
       </div>
     </f:if>
 
-    <section class="1column__before-content ">
-      <div class="1column__before-content-container">
+    <section class="page-1column__before-content ">
+      <div class="page-1column__before-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
       </div>
     </section>
 
-    <section class="1column__content">
+    <section class="page-1column__content">
 
       <div class="container-wrp">
         <div class="container">
@@ -71,8 +71,8 @@
 
     </section>
 
-    <section class="1column__after-content">
-      <div class="1column__after-content-container">
+    <section class="page-1column__after-content">
+      <div class="page-1column__after-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
       </div>
     </section>
