--- a/Resources/Private/Templates/Page/1column75Sidenav25.html
+++ b/Resources/Private/Templates/Page/1column75Sidenav25.html
@@ -37,10 +37,10 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main id="main" class="1column75-sidenav25">
+  <main id="main" class="page-1column75-sidenav25">
 
-    <section class="1column75-sidenav25__top-content">
-      <div class="1column75-sidenav25__top-content-container">
+    <section class="page-1column75-sidenav25__top-content">
+      <div class="page-1column75-sidenav25__top-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
       </div>
     </section>
@@ -51,13 +51,13 @@
       </div>
     </f:if>
 
-    <section class="1column75-sidenav25__before-content ">
-      <div class="1column75-sidenav25__before-content-container">
+    <section class="page-1column75-sidenav25__before-content ">
+      <div class="page-1column75-sidenav25__before-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
       </div>
     </section>
 
-    <section class="1column75-sidenav25__content">
+    <section class="page-1column75-sidenav25__content">
 
       <div class="container-wrp">
         <div class="container">
@@ -77,8 +77,8 @@
 
     </section>
 
-    <section class="1column75-sidenav25__after-content">
-      <div class="1column75-sidenav25__after-content-container">
+    <section class="page-1column75-sidenav25__after-content">
+      <div class="page-1column75-sidenav25__after-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
       </div>
     </section>
