--- a/Resources/Private/Templates/Page/2columnsSidenav.html
+++ b/Resources/Private/Templates/Page/2columnsSidenav.html
@@ -37,10 +37,10 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <main id="main" class="2columns-sidenav">
+  <main id="main" class="page-2columns-sidenav">
 
-    <section class="2columns-sidenav__top-content">
-      <div class="2columns-sidenav__top-content-container">
+    <section class="page-2columns-sidenav__top-content">
+      <div class="page-2columns-sidenav__top-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
       </div>
     </section>
@@ -51,13 +51,13 @@
       </div>
     </f:if>
 
-    <section class="2columns-sidenav__before-content ">
-      <div class="2columns-sidenav__before-content-container">
+    <section class="page-2columns-sidenav__before-content ">
+      <div class="page-2columns-sidenav__before-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
       </div>
     </section>
 
-    <section class="2columns-sidenav__content">
+    <section class="page-2columns-sidenav__content">
 
       <div class="container-wrp">
         <div class="container">
@@ -81,8 +81,8 @@
 
     </section>
 
-    <section class="2columns-sidenav__after-content">
-      <div class="2columns-sidenav__after-content-container">
+    <section class="page-2columns-sidenav__after-content">
+      <div class="page-2columns-sidenav__after-content-container">
         <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
       </div>
     </section>
