[FEATURE] Frontend editing support for linebreaks
Linebreaks are now supported in Frontend Editing when editing non-RTE fields with br linebreaks.

--- a/Resources/Private/Partials/ContentElements/Bodytext/Bodytext.html
+++ b/Resources/Private/Partials/ContentElements/Bodytext/Bodytext.html
@@ -4,6 +4,8 @@
   <f:render partial="Bodytext/Render/Bodytext" arguments="{
     uid: data.uid,
     bodytext: data.bodytext,
+    table: table,
+    field: field,
     bodytext_position: data.content_position}" />
 </f:if>
 
