--- a/Resources/Private/Partials/ContentElements/Header/Header.html
+++ b/Resources/Private/Partials/ContentElements/Header/Header.html
@@ -7,6 +7,8 @@
       header: data.header,
       layout: data.header_layout,
       style: data.header_style,
+      table: data.table,
+      field: data.field,
       position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
       link: data.header_link}" />
   </f:if>
