--- a/Resources/Private/Partials/ContentElements/Header/HeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/HeaderText.html
@@ -7,6 +7,8 @@
       header_text: data.header_text,
       header_layout: data.header_layout,
       header_style: data.header_style,
+      table: table,
+      field: field,
       header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
       header_link: data.header_link}" />
   </f:if>
