--- a/Resources/Private/Partials/ContentElements/Header/Render/SubHeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/SubHeaderText.html
@@ -1,45 +1,53 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <f:if condition="{subheader_text}">
+  <f:if condition="!{table}">
+    <f:variable name="table" value="tt_content" />
+  </f:if>
+
+  <f:if condition="!{field}">
+    <f:variable name="field" value="subheader_text" />
+  </f:if>
+
   <f:switch expression="{header_layout}">
     <f:case value="1">
       <h2 class="{header_position} {subheader_style} subheader-text-item">
-        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+        <t3kit:contentEditable table="{table}" field="{field}" uid="{uid}">
           <f:format.nl2br>{subheader_text}</f:format.nl2br>
         </t3kit:contentEditable>
       </h2>
     </f:case>
     <f:case value="2">
       <h3 class="{header_position} {subheader_style} subheader-text-item">
-        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+        <t3kit:contentEditable table="{table}" field="{field}" uid="{uid}">
           <f:format.nl2br>{subheader_text}</f:format.nl2br>
         </t3kit:contentEditable>
       </h3>
     </f:case>
     <f:case value="3">
       <h4 class="{header_position} {subheader_style} subheader-text-item">
-        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+        <t3kit:contentEditable table="{table}" field="{field}" uid="{uid}">
           <f:format.nl2br>{subheader_text}</f:format.nl2br>
         </t3kit:contentEditable>
       </h4>
     </f:case>
     <f:case value="4">
       <h5 class="{header_position} {subheader_style} subheader-text-item">
-        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+        <t3kit:contentEditable table="{table}" field="{field}" uid="{uid}">
           <f:format.nl2br>{subheader_text}</f:format.nl2br>
         </t3kit:contentEditable>
       </h5>
     </f:case>
     <f:case value="5">
       <h6 class="{header_position} {subheader_style} subheader-text-item">
-        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+        <t3kit:contentEditable table="{table}" field="{field}" uid="{uid}">
           <f:format.nl2br>{subheader_text}</f:format.nl2br>
         </t3kit:contentEditable>
       </h6>
     </f:case>
     <f:case value="6">
       <h6 class="{header_position} {subheader_style} subheader-text-item">
-        <t3kit:contentEditable table="tt_content" field="subheader_text" uid="{uid}">
+        <t3kit:contentEditable table="{table}" field="{field}" uid="{uid}">
           <f:format.nl2br>{subheader_text}</f:format.nl2br>
         </t3kit:contentEditable>
       </h6>
