--- a/Resources/Private/Partials/ContentElements/Header/SubHeader.html
+++ b/Resources/Private/Partials/ContentElements/Header/SubHeader.html
@@ -7,6 +7,8 @@
       subheader: data.subheader,
       layout: data.header_layout,
       subheader_style: data.subheader_style,
+      table: table,
+      field: field,
       position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
