--- a/Resources/Private/Partials/ContentElements/Header/SubHeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/SubHeaderText.html
@@ -7,6 +7,8 @@
       subheader_text: data.subheader_text,
       header_layout: data.header_layout,
       subheader_style: data.subheader_style,
+      table: table,
+      field: field,
       header_position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
