[BUGFIX] Correct property names

--- a/Resources/Private/Partials/ContentElements/Header/Render/HeaderText.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/HeaderText.html
@@ -6,7 +6,7 @@
   </f:if>
 
   <f:if condition="!{field}">
-    <f:variable name="field" value="header" />
+    <f:variable name="field" value="header_text" />
   </f:if>
 
   <f:switch expression="{header_layout}">
