--- a/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SimpleSiteHeader.html
@@ -148,6 +148,7 @@
           <li class="main-navigation__dropdown-item {f:if(condition: childItem.active, then:' active')} {childItem.data.uid}">
             <a href="{childItem.link}"
               class=" main-navigation__dropdown-item-link"
+              {f:if(condition: '{childItem.target} == "_blank"', then: 'target="_blank"')}
               {f:if(condition: childItem.current, then: 'aria-current="page"')}>
                 {childItem.title}
             </a>
