[TASK] stretched-link-wrp added on static elements that supports 'Enable whole area link'

--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
@@ -17,7 +17,8 @@
 
   <div class="ce-img-text-link__wrp
     {f:if(condition: flexform.internal_margins, then: ' internal-margins')}
-    {f:if(condition: flexform.inverted_color, then: ' inverted-color')}">
+    {f:if(condition: flexform.inverted_color, then: ' inverted-color')}
+    {f:if(condition: flexform.stretched_link, then: ' stretched-link-wrp')}">
 
     <div class="ce-img-text-link">
 
