--- a/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/ImageTextLink.html
@@ -21,7 +21,8 @@
 
   <div class="ce-img-text-link__wrp
     {f:if(condition: flexform.internal_margins, then: ' internal-margins')}
-    {f:if(condition: flexform.inverted_color, then: ' inverted-color')}">
+    {f:if(condition: flexform.inverted_color, then: ' inverted-color')}
+    {f:if(condition: flexform.stretched_link, then: ' stretched-link-wrp')}">
 
     <f:if condition="{header_above_image}">
       <f:if condition="{data.header} || {t3kit:isPlaceholderEnabled()}">
