[TASK] update deps, bootstrap v5.0.1, swiper, devDependencies

--- a/theme/src/css/main/content-elements/quote.css
+++ b/theme/src/css/main/content-elements/quote.css
@@ -34,7 +34,7 @@
 }
 
 .ce-quote__footer:before {
-  content: "— ";
+  content: "— "; /* stylelint-disable-line */
 }
 
 .ce-quote__footer-author-name {
